@@ -28,6 +28,7 @@ siril 1.0.0
 * New preference entries with darks/biases/flat libraries
 * New preliminary Meson support (Florian Benedetti)
 * New ROWORDER FITS keyword that should be used by several programm now
+* Handle datetime in TIFF file
 * Image display refactoring (Guillaume Roguez)
 * Added color profile in TIFF and PNG files
 * X(Y)BAYEROFF can now be configured in preferences
